@@ -3,6 +3,7 @@ Changes for the Labyrinth-Plugin-Album
         - fixed XHTML tags.
         - added button classes.
         - updated titles and breadcrumbs.
+        - added slideshow template and javascript.
 
 1.04	2013-02-10
         - added cover photo feature.
